--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.23.22",
     "howler": "^2.2.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
